--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "build": "react-scripts build",
     "test": "jest",
     "eject": "react-scripts eject",
-    "dev": "nodemon server.js"
+    "dev": "nodemon src/APIstuff/signup.js"
   },
   "eslintConfig": {
     "extends": [
