--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^13.5.0",
     "bcrypt": "^5.1.0",
     "body-parser": "^1.20.2",
+    "bootstrap": "^5.3.0",
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "mongodb": "^5.6.0",
@@ -15,6 +16,7 @@
     "node": "^17.8.0",
     "nodemailer": "^6.9.3",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.8.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.14.0",
     "react-scripts": "5.0.1",
