Potential fix for heroku api.

--- a/package.json
+++ b/package.json
@@ -24,11 +24,8 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "WATCHPACK_POLLING=true react-scripts start",
-    "build": "react-scripts build",
-    "test": "jest",
-    "eject": "react-scripts eject",
-    "dev": "nodemon src/APIstuff/server.js"
+    "start" : "node server.js",
+    "heroku-postbuild":  "NPM_CONFIG_PRODUCTION=false npm install --prefix frontend && npm run build --prefix frontend"
   },
   "eslintConfig": {
     "extends": [
