potential fix for heroku.

--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
   },
   "scripts": {
     "start" : "node server.js",
-    "heroku-postbuild":  "NPM_CONFIG_PRODUCTION=false npm install --prefix frontend && npm run build --prefix frontend"
+    "heroku-postbuild":  "NPM_CONFIG_PRODUCTION=false"
   },
   "eslintConfig": {
     "extends": [
