--- a/package.json
+++ b/package.json
@@ -24,8 +24,8 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "node index.js",
-    "heroku-postbuild": "cd gamereview && npm install && npm run build"
+    "start": "node server.js",
+    "heroku-postbuild": "npm run build"
   },
   "eslintConfig": {
     "extends": [
