--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "node server.js",
+    "start": "node src/APIStuff/server.js",
     "heroku-postbuild": "npm run"
   },
   "eslintConfig": {
